syntax = "proto3";

package portfolio;
option go_package = "github.com/Sannrox/tradepipe/grpc/portfolio";

message RequestPositions {
    string processId = 1;
}

message ResponsePositions {
    string processId = 1;
    string error = 2;
    bytes postions = 3;
}